--- a/SetuPaTimer/app/src/main/res/layout/fragment_jokes_list.xml
+++ b/SetuPaTimer/app/src/main/res/layout/fragment_jokes_list.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@color/black"
   tools:context=".FragmentJokesList">
   
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recycle_joke_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/border_empty_white"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     />
+
 </FrameLayout>
