--- a/SetuPaTimer/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/SetuPaTimer/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,24 +5,30 @@
     android:id="@+id/bottom_bar_btn_all"
     android:enabled="true"
     android:icon="@drawable/ic_list"
-    android:title="@string/bottombar_button_all" />
+    android:title="@string/bottom_bar_button_all" />
   
   <item
     android:id="@+id/bottom_bar_btn_unwatched"
     android:enabled="true"
     android:icon="@drawable/ic_unwatched"
-    android:title="@string/bottombar_button_unwatched" />
+    android:title="@string/bottom_bar_button_unwatched" />
   
   <item
     android:id="@+id/bottom_bar_btn_watched"
     android:enabled="true"
     android:icon="@drawable/ic_watched"
-    android:title="@string/bottombar_button_watched" />
+    android:title="@string/bottom_bar_button_watched" />
   
   <item
     android:id="@+id/bottom_bar_btn_favorite"
     android:enabled="true"
-    android:icon="@drawable/ic_favorite"
-    android:title="@string/bottombar_button_favorite" />
+    android:icon="@drawable/ic_favorite_true"
+    android:title="@string/bottom_bar_button_favorite" />
+  
+  <item
+    android:id="@+id/bottom_bar_btn_info"
+    android:enabled="true"
+    android:icon="@drawable/ic_info"
+    android:title="@string/bottom_bar_button_info" />
   
 </menu>
