--- a/SetuPaTimer/app/src/main/res/layout/fragment_info.xml
+++ b/SetuPaTimer/app/src/main/res/layout/fragment_info.xml
@@ -53,6 +53,7 @@
       />
   
     <ImageButton
+      android:id="@+id/info_source"
       android:layout_width="@dimen/info_image_size"
       android:layout_height="@dimen/info_image_size"
       android:scaleType="centerCrop"
@@ -76,6 +77,7 @@
       android:orientation="horizontal">
     
       <ImageButton
+        android:id="@+id/info_instagram"
         android:layout_width="@dimen/info_image_size"
         android:layout_height="@dimen/info_image_size"
         android:scaleType="centerCrop"
@@ -84,6 +86,7 @@
         android:src="@drawable/info_instagram" />
     
       <ImageButton
+        android:id="@+id/info_telegram"
         android:layout_width="@dimen/info_image_size"
         android:layout_height="@dimen/info_image_size"
         android:scaleType="centerCrop"
