--- a/SetuPaTimer/app/src/main/res/values/dimens.xml
+++ b/SetuPaTimer/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
   <dimen name="info_image_size">50dp</dimen>
   <dimen name="info_item_margin_V">10dp</dimen>
   <dimen name="info_button_margin_H">10dp</dimen>
+  <dimen name="choosen_joke_main_padding">4dp</dimen>
 </resources>
